# company

./: .dockerignore  .gitignore  Dockerfile  README.md  dev.sh  docker-compose.dev.yml  entrypoint.sh  plan.md  program.md  project.yaml  supervisord.conf
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  routes.py  websocket.py
backend/app/models/: __init__.py  agent.py  canvas.py  event.py  plan.py  project.py  task.py
backend/app/services/: __init__.py  git.py  orchestrator.py  state.py
backend/tests/: test_state.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: AgentIdentityPanel.tsx  AgentNode.tsx  AgentSidebar.tsx  Canvas.tsx  EventFeed.tsx  MessageLine.tsx  ProjectRegion.tsx  ProjectSidebar.tsx  Sidebar.tsx  TaskDetailPanel.tsx  TaskNode.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/stores/: useAgentStore.ts  useCanvasStore.ts
frontend/src/theme/: colors.ts
